--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,13 +20,14 @@ html,
 body {
 	max-width: 100vw;
 	overflow-x: hidden;
+	height: 100%;
 }
 
 body {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	height: 100vh;
+	min-height: 100vh;
+	height: 100%;
 	gap: 0;
 }
 
